finally fixed clipping?

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -522,6 +522,7 @@
 
 #tutorial img{
     max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
 }
 
